# DeepLearning-Study

./: .gitignore  main.py  pyproject.toml
src/: 01_Gradient_Descent.ipynb  02_Pytorch.ipynb  03_DeepLearning_Regression.ipynb  04_DeepLearning_ImageClassification.ipynb  04_DeepLearning_ImageClassification_MNIST.ipynb  05_CNN.ipynb  05_CNN_RENET.ipynb  06_CNN_VGG16.ipynb  07_Transfer_FineTuning.ipynb  08_01_Transfrer_CelebrityImage_Collector.ipynb  08_02_Transfrer_CelebrityImage_Classification.ipynb  09_Save_Load_Model.ipynb  11_Pydantic.ipynb  12_GradCAM.ipynb  day7_1_minist.ipynb
src/09_Fastapi_Server/: main.py
src/09_Fastapi_Server/templates/: index.html
src/10_Fastapi_Model_Server/: main.py
src/models/: model_full.pth  model_weights.pth  number_image_classification_model.pkl  number_image_cnn_model.pkl
src/tools/: image_util.py
